--- a/src/lib/core/overlay/_overlay.scss
+++ b/src/lib/core/overlay/_overlay.scss
@@ -8,10 +8,7 @@
 
   // TODO(jelbourn): change from the `md` prefix to something else for everything in the toolkit.
 
-  // The overlay-container is an invisible element which contains all individual overlays.
-  .md-overlay-container {
-    position: fixed;
-
+  .md-overlay-container, .md-global-overlay-wrapper {
     // disable events from being captured on the overlay container.
     pointer-events: none;
 
@@ -20,8 +17,25 @@
     left: 0;
     height: 100%;
     width: 100%;
+  }
+
+  // The overlay-container is an invisible element which contains all individual overlays.
+  .md-overlay-container {
+    position: fixed;
     z-index: $md-z-index-overlay-container;
   }
+
+  // we use an extra wrapper element in order to make the overlay
+  // itself a flex item.  this makes centering the overlay easy
+  // without running into the sub-pixel rendering problems tied 
+  // to using "transform" and without interfering with the other
+  // position strategies
+  .md-global-overlay-wrapper {
+    display: flex;
+    position: absolute;
+    z-index: $md-z-index-overlay;
+  }
+
 
   // a single overlay pane 
   .md-overlay-pane {
