--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-﻿<navigation></navigation>
-
+﻿
 <div class="container">
+
+    <a [routerLink]="['/home']">Home</a>
 
     <router-outlet></router-outlet>
 
-    <customfooter></customfooter>
+
+
 </div>
