--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,10 @@ body {
   padding-top: 70px;
 }
 
+/* h1 {
+  font-size: 3em;
+}*/
+
 .starter-template {
   padding: 40px 15px;
   text-align: center;
